--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 extend: {
                     colors: {
                         slate: {
-                            850: '#1e293b', // Custom darker slate
+                            850: '#1e293b', 
                             900: '#0f172a',
                             950: '#020617',
                         }
@@ -111,11 +111,11 @@
                 
                 <div class="flex flex-col md:flex-row md:items-start justify-between gap-4">
                     <div class="flex flex-col flex-grow gap-3 w-full max-w-2xl">
-                        <div class="flex items-center gap-3">
-                            <span class="text-sm font-semibold text-slate-700 dark:text-slate-200">API Endpoint Configuration</span>
-                            <label class="flex items-center gap-1.5 cursor-pointer bg-white dark:bg-slate-700 hover:bg-slate-50 dark:hover:bg-slate-600 px-2 py-1 rounded border border-slate-200 dark:border-slate-600 shadow-sm transition-colors">
-                                <input type="checkbox" id="edit-api-url-toggle" class="rounded border-slate-300 text-blue-600 focus:ring-blue-500 w-3.5 h-3.5 cursor-pointer">
-                                <span class="text-xs font-medium text-slate-600 dark:text-slate-300 select-none">Edit Base URL</span>
+                        <div class="flex items-center gap-3 bg-slate-50 dark:bg-slate-700/50 border border-slate-200 dark:border-slate-600 px-4 py-2.5 rounded-lg shadow-sm w-fit">
+                            <label for="edit-api-url-toggle" class="text-sm font-semibold text-slate-700 dark:text-slate-200 cursor-pointer select-none">API Endpoint Configuration</label>
+                            <label class="toggle-switch transform scale-90" style="margin: 0;">
+                                <input type="checkbox" id="edit-api-url-toggle">
+                                <span class="slider"></span>
                             </label>
                         </div>
                         <div id="api-url-container" class="hidden transition-all duration-300">
@@ -271,6 +271,22 @@
 
                         <div class="flex flex-col sm:flex-row gap-3 w-full lg:w-auto items-end">
                             
+                            <div class="w-full sm:w-auto relative">
+                                <label for="status-filter" class="block text-xs font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wide mb-1">Status</label>
+                                <div class="relative">
+                                    <select id="status-filter" class="h-10 pl-3 pr-8 py-2 w-full bg-white dark:bg-slate-700 border border-slate-300 dark:border-slate-600 rounded-md text-sm text-slate-700 dark:text-slate-200 font-medium focus:ring-blue-500 focus:border-blue-500 cursor-pointer hover:bg-slate-50 dark:hover:bg-slate-600 transition-colors outline-none appearance-none shadow-sm">
+                                        <option value="all">All Users</option>
+                                        <option value="Retained">Retained</option>
+                                        <option value="New">New</option>
+                                    </select>
+                                    <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-slate-500">
+                                        <svg class="h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                                            <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+
                             <div class="w-full sm:w-auto">
                                 <label class="block text-xs font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wide mb-1">Trans. Count</label>
                                 <div class="flex items-center">
