Added weekly monitor stats to dashboard 1.3

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </header>
 
         <details class="weekly-monitor-details bg-white dark:bg-slate-800 rounded-xl border border-slate-200 dark:border-slate-700 mb-8 shadow-sm">
-            <summary class="weekly-monitor-summary dark:text-slate-200 dark:hover:bg-slate-700">Real-time Weekly Stats + Fieldwork</summary>
+            <summary class="weekly-monitor-summary dark:text-slate-200 dark:hover:bg-slate-700">Live: Weekly Stats + Fieldwork</summary>
             <div id="weekly-monitor-content">
                 <div class="p-10 text-center text-slate-500 flex flex-col items-center">
                     <div class="loader mb-4 w-8 h-8 border-4"></div>
@@ -112,7 +112,7 @@
                 <div class="flex flex-col md:flex-row md:items-start justify-between gap-4">
                     <div class="flex flex-col flex-grow gap-3 w-full max-w-2xl">
                         <div class="flex items-center gap-3 bg-slate-50 dark:bg-slate-700/50 border border-slate-200 dark:border-slate-600 px-4 py-2.5 rounded-lg shadow-sm w-fit">
-                            <label for="edit-api-url-toggle" class="text-sm font-semibold text-slate-700 dark:text-slate-200 cursor-pointer select-none">API Endpoint Configuration</label>
+                            <label for="edit-api-url-toggle" class="text-sm font-semibold text-slate-700 dark:text-slate-200 cursor-pointer select-none">Modify API</label>
                             <label class="toggle-switch transform scale-90" style="margin: 0;">
                                 <input type="checkbox" id="edit-api-url-toggle">
                                 <span class="slider"></span>
