Minor text update

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <header class="mb-8 flex flex-col md:flex-row items-center justify-between gap-4">
             <div class="text-center md:text-left">
                 <h1 class="text-3xl sm:text-4xl font-bold text-slate-900 dark:text-white main-title">Retention & Analysis Dashboard</h1>
-                <p class="text-slate-500 dark:text-slate-400 mt-2">Use the API fetch for cohort and churn analysis or view live metrics.</p>
+                <p class="text-slate-500 dark:text-slate-400 mt-2">Run cohort analysis, set up field monitors, and view live stats.</p>
             </div>
             <button id="theme-toggle" class="p-2 rounded-full bg-white dark:bg-slate-800 border border-slate-200 dark:border-slate-700 shadow-sm text-slate-500 dark:text-slate-400 hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                 <svg id="sun-icon" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hidden dark:block" fill="none" viewBox="0 0 24 24" stroke="currentColor">
